fix alignment

--- a/style.css
+++ b/style.css
@@ -461,7 +461,7 @@ body.dark-mode,
     }
 
     .slide {
-        top: calc(50vh - 2px);
+        top: calc(50% - 2px);
     }
 }
 
@@ -613,7 +613,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     }
 
     .slide {
-        top: calc(50vh - 2px);
+        top: calc(50% - 2px);
     }
 
     .top-button {
